--- a/takeaway.html
+++ b/takeaway.html
@@ -931,7 +931,7 @@
                   </div>
                   <div class="item-actions">
                     <div class="item-price">12,90 €</div>
-                    <button class="add-to-cart" data-name="Yakisoba de llagosta"
+                    <button class="add-to-cart" data-name="Yakisoba de llagostí"
                       data-price="12.90">
                       <i class="fas fa-plus"></i>
                     </button>
@@ -981,14 +981,14 @@
 
                 <div class="menu-item">
                   <div class="item-info">
-                    <div class="item-name">Yakimeshi de llagosta</div>
+                    <div class="item-name">Yakimeshi de llagostí</div>
                     <div class="item-description">Cues de llagostí amb barreja
                       de verdures i bolets.</div>
                   </div>
                   <div class="item-actions">
                     <div class="item-price">11,90 €</div>
                     <button class="add-to-cart"
-                      data-name="Yakimeshi de llagosta"
+                      data-name="Yakimeshi de llagostí"
                       data-price="11.90">
                       <i class="fas fa-plus"></i>
                     </button>
@@ -1089,11 +1089,11 @@
 
                 <div class="menu-item">
                   <div class="item-info">
-                    <div class="item-name">Variats de  (16 peces)</div>
+                    <div class="item-name">Variats de     (16 peces)</div>
                   </div>
                   <div class="item-actions">
                     <div class="item-price">29,90 €</div>
-                    <button class="add-to-cart" data-name="Variat de sashimi y nigiris"
+                    <button class="add-to-cart" data-name="Variat de    (16 peces)"
                       data-price="29.90">
                       <i class="fas fa-plus"></i>
                     </button>
@@ -1172,9 +1172,9 @@
                       làmines de tòfona.</div>
                   </div>
                   <div class="item-actions">
-                    <div class="item-price">7,50 €</div>
+                    <div class="item-price">7,40 €</div>
                     <button class="add-to-cart" data-name="Nigiri de Tonyina trufat"
-                      data-price="7.50">
+                      data-price="7.40">
                       <i class="fas fa-plus"></i>
                     </button>
                   </div>
@@ -1227,13 +1227,13 @@
 
                 <div class="menu-item">
                   <div class="item-info">
-                    <div class="item-name">Variat de nigiris y sashimi (16 peces)</div>
+                    <div class="item-name">Variat de      (16 peces)</div>
                     <div class="item-description">Una barreja de diversos
                       nigiris y sashimi de la carta.</div>
                   </div>
                   <div class="item-actions">
                     <div class="item-price">29,90 €</div>
-                    <button class="add-to-cart" data-name="Variat de nigiris y sashimi"
+                    <button class="add-to-cart" data-name="Variat de   (16 peces)"
                       data-price="29.90">
                       <i class="fas fa-plus"></i>
                     </button>
