--- a/takeaway.html
+++ b/takeaway.html
@@ -1080,7 +1080,7 @@
                   </div>
                   <div class="item-actions">
                     <div class="item-price">16,00 €</div>
-                    <button class="add-to-cart" data-name="Variat de sashimi "
+                    <button class="add-to-cart" data-name="Variats de sashimi "
                       data-price="16.00">
                       <i class="fas fa-plus"></i>
                     </button>
@@ -1093,7 +1093,7 @@
                   </div>
                   <div class="item-actions">
                     <div class="item-price">29,90 €</div>
-                    <button class="add-to-cart" data-name="Variat de    (16 peces)"
+                    <button class="add-to-cart" data-name="Variats de    (16 peces)"
                       data-price="29.90">
                       <i class="fas fa-plus"></i>
                     </button>
@@ -1218,7 +1218,7 @@
                   </div>
                   <div class="item-actions">
                     <div class="item-price">15,90 €</div>
-                    <button class="add-to-cart" data-name="Variat de nigiris"
+                    <button class="add-to-cart" data-name="Variats de nigiris"
                       data-price="15.90">
                       <i class="fas fa-plus"></i>
                     </button>
@@ -1227,13 +1227,13 @@
 
                 <div class="menu-item">
                   <div class="item-info">
-                    <div class="item-name">Variat de      (16 peces)</div>
+                    <div class="item-name">Variats de      (16 peces)</div>
                     <div class="item-description">Una barreja de diversos
                       nigiris y sashimi de la carta.</div>
                   </div>
                   <div class="item-actions">
                     <div class="item-price">29,90 €</div>
-                    <button class="add-to-cart" data-name="Variat de   (16 peces)"
+                    <button class="add-to-cart" data-name="Variats de   (16 peces)"
                       data-price="29.90">
                       <i class="fas fa-plus"></i>
                     </button>
