--- a/takeaway.html
+++ b/takeaway.html
@@ -1248,8 +1248,7 @@
                   <div class="menu-items">
                     <div class="menu-item">
                       <div class="item-info">
-                        <div class="item-name">Nigiri de peix blanc (2
-                          peces)</div>
+                        <div class="item-name">Nigiri de peix blanc (2 peces)</div>
                         <div class="item-description">Peix blanc fresc sobre
                           arròs
                           per a sushi.</div>
