--- a/takeaway.html
+++ b/takeaway.html
@@ -1503,7 +1503,7 @@
                 </div>
               </div>
             </div>
-
+                    <!-- POSTRES 
             <div class="section">
               <div class="section-title">
                 <span>Postres 🍡</span>
@@ -1612,7 +1612,9 @@
                   </div>
                 </div>
               </div>
+
             </div>
+            -->
           </div>
 
           <div class="cart-column">
