--- a/reservaciones.html
+++ b/reservaciones.html
@@ -57,8 +57,9 @@
             <section class="reservation-form">
                 <h2>Fes la teva reserva</h2>
 
-                <div class="reservation-info">
-                    <!-- Sección Capacitat per torn -->
+                                    <!-- Sección Capacitat per torn 
+                    <div class="reservation-info">
+
                     <div class="info-box capacity-info">
                         <h3 class="toggle-title"><i class="fas fa-users"></i>
                             Capacitat per torn</h3>
@@ -79,8 +80,9 @@
                                     places</span>
                             </div>
                         </div>
-                    </div>
+                    </div>  
                 </div>
+                -->
 
                 <!-- Formulari -->
                 <form id="reservationForm">
