--- a/reservaciones.html
+++ b/reservaciones.html
@@ -123,7 +123,7 @@
                         <!-- Comentaris -->
                         <div class="form-group">
                             <label for="comments">Comentaris
-                                addicionals:</label>
+                                adicionals:</label>
                             <textarea id="comments" name="comments" rows="4"
                                 placeholder="Al·lèrgies, preferències, etc."></textarea>
                         </div>
