--- a/takeaway.html
+++ b/takeaway.html
@@ -1951,8 +1951,8 @@ function checkServiceHours() {
     const lunchStart = 12 * 60 + 15; // 12:15
     const lunchEnd = 15 * 60 + 15; // 15:15
     
-    const dinnerStart = 19 * 60 ; // 19:00
-    const dinnerEnd = 22 * 60 + 36; // 22:30
+    const dinnerStart = 18 * 60 ; // 18:00
+    const dinnerEnd = 21 * 60 ; // 21:00
     
     // 1. Comprobar si es Lunes (cerrado todo el día)
     if (day === 1) {
