--- a/menu.html
+++ b/menu.html
@@ -47,7 +47,7 @@
     <main>
           <section class="menu">
             <!-- CARTA-->
-           <h2><a href="CartaMenu.pdf" target="_blank" style="text-decoration: none; color: inherit;">CARTA (Clic)</a></h2>
+           <h2><a href="Carta.pdf" target="_blank" style="text-decoration: none; color: inherit;">CARTA (Clic)</a></h2>
             <div class="menu-category">
                 <h3>PLATS DESTACATS</h3>
                 <div class="menu-item">
