--- a/menu.html
+++ b/menu.html
@@ -93,6 +93,7 @@
         <p>&copy; 2025 Restaurante Mitori. Todos los derechos reservados.</p>
     </footer>
 
+    <script src="js/script.js"></script>
     <script>
 document.addEventListener('DOMContentLoaded', () => {
     const modal = document.getElementById("imageModal");
